Fix benefit overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,6 @@ html{
 }
 
 body{
-    width: 100vw;
     display: flex;
     flex-flow: column;
     justify-content: space-between; 
@@ -148,6 +147,7 @@ main{
     justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
+    width: 100%;
     max-width: 1900px;
     min-width: 320px
 }
@@ -458,6 +458,7 @@ main{
 }
 
 .benefit{
+    width: 100%;
     display: flex;
     flex-flow: column;
     color: white;
@@ -504,81 +505,81 @@ main{
     }
 }
 
-.benefit__svg-upper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    z-index: 2;
-}
+// .benefit__svg-upper {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     overflow: hidden;
+//     line-height: 0;
+//     z-index: 2;
+// }
 
-.benefit__svg-upper svg {
-    position: relative;
-    display: block;
-    width: calc(168% + 1.3px);
-    height: 327px !important;
-}
+// .benefit__svg-upper svg {
+//     position: relative;
+//     display: block;
+//     width: calc(168% + 1.3px);
+//     height: 327px !important;
+// }
 
-.benefit__svg-upper .shape-fill {
-    fill: #FFFFFF;
-}
+// .benefit__svg-upper .shape-fill {
+//     fill: #FFFFFF;
+// }
 
 
-@media (min-width: 768px) and (max-width: 1023px) {
-    .benefit__svg-upper svg {
-        width: calc(146% + 1.3px);
-        height: 315px !important;
-    }
-}
+// @media (min-width: 768px) and (max-width: 1023px) {
+//     .benefit__svg-upper svg {
+//         width: calc(146% + 1.3px);
+//         height: 315px !important;
+//     }
+// }
 
-@media (max-width: 767px) {
-    .benefit__svg-upper svg {
-        width: calc(160% + 1.3px);
-        height: 165px !important;
-    }
-}
+// @media (max-width: 767px) {
+//     .benefit__svg-upper svg {
+//         width: calc(160% + 1.3px);
+//         height: 165px !important;
+//     }
+// }
 
-.benefit__svg-lower {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    transform: rotate(180deg);
-}
+// .benefit__svg-lower {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 100%;
+//     overflow: hidden;
+//     line-height: 0;
+//     transform: rotate(180deg);
+// }
 
-.benefit__svg-lower svg {
-    position: relative;
-    display: block;
-    width: calc(168% + 1.3px);
-    height: 327px !important;
-}
+// .benefit__svg-lower svg {
+//     position: relative;
+//     display: block;
+//     width: calc(168% + 1.3px);
+//     height: 327px !important;
+// }
 
-.benefit__svg-lower .shape-fill {
-    fill: #FFFFFF;
-}
+// .benefit__svg-lower .shape-fill {
+//     fill: #FFFFFF;
+// }
 
-@media (min-width: 768px) and (max-width: 1023px) {
-    .benefit__svg-lower svg {
-        width: calc(146% + 1.3px);
-        height: 315px !important;
-    }
-}
+// @media (min-width: 768px) and (max-width: 1023px) {
+//     .benefit__svg-lower svg {
+//         width: calc(146% + 1.3px);
+//         height: 315px !important;
+//     }
+// }
 
-@media (max-width: 767px) {
-    .benefit__svg-lower svg {
-        width: calc(160% + 1.3px);
-        height: 165px !important;
-    }
-}
+// @media (max-width: 767px) {
+//     .benefit__svg-lower svg {
+//         width: calc(160% + 1.3px);
+//         height: 165px !important;
+//     }
+// }
 
 @media only screen and (min-width: 700px){
 
     .benefit{
-        width: 100vw;
+        
     }
     .benefit__card-container{
         display: flex;
@@ -883,7 +884,7 @@ footer{
 }
 
 
-@media only screen and (max-width: 350px){
+@media only screen and (max-width: 400px){
     html{
         font-size: 12px;
     }
