--- a/scss/schedule.scss
+++ b/scss/schedule.scss
@@ -9,7 +9,6 @@ html{
 }
 
 body{
-    width: 100vw;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
